// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BattleViewer Integration > Snapshot Tests > should match snapshot for battle at specific tick 1`] = `
"<div class="battle-viewer">
  <div class="players"><div class="character-card player" data-character-id="player-1">
  <div class="character-name"><span style="color: #2196f3; font-weight: bold;">Hero</span></div>
  <div class="hp-bar-container">
    <div class="hp-bar" style="width: 85%"></div>
    <span class="hp-text">85/100</span>
  </div>
  <div class="status-effects"></div>
  <div class="action-display"><span class="action-name">Strike</span><span class="ticks-remaining">Executing</span></div>
</div></div>
  <div class="enemies"><div class="character-card enemy" data-character-id="enemy-1">
  <div class="character-name"><span style="color: #9c27b0; font-weight: bold;">Goblin</span></div>
  <div class="hp-bar-container">
    <div class="hp-bar" style="width: 40%"></div>
    <span class="hp-text">20/50</span>
  </div>
  <div class="status-effects"><span class="status poisoned" data-duration="3">Poisoned (3)</span></div>
  <div class="action-display"><span class="action-name">Strike</span><span class="ticks-remaining">Executing</span></div>
</div></div>
  <div class="event-log">
  <div class="event tick-summary" data-tick="5">
    <span class="tick">T5:</span>
    <span class="message">Goblin takes 5 poison damage</span>
  </div>
  <div class="event tick-summary" data-tick="4">
    <span class="tick">T4:</span>
    <span class="message">Goblin takes 5 poison damage</span>
  </div>
  <div class="event tick-summary" data-tick="3">
    <span class="tick">T3:</span>
    <span class="message">player-1→Poison→enemy-1(15). player-1→Strike→enemy-1(15). enemy-1→Strike→player-1(15). poisoned applied to Goblin. Goblin takes 5 poison damage</span>
  </div>
</div>
  
</div>"
`;

exports[`BattleViewer Integration > Snapshot Tests > should match snapshot for initial state 1`] = `
"<div class="battle-viewer">
  <div class="players"><div class="character-card player" data-character-id="player-1">
  <div class="character-name"><span style="color: #2196f3; font-weight: bold;">Hero</span></div>
  <div class="hp-bar-container">
    <div class="hp-bar" style="width: 100%"></div>
    <span class="hp-text">100/100</span>
  </div>
  <div class="status-effects"></div>
  <div class="action-display"><span class="action-name">Idle</span></div>
</div></div>
  <div class="enemies"><div class="character-card enemy" data-character-id="enemy-1">
  <div class="character-name"><span style="color: #9c27b0; font-weight: bold;">Goblin</span></div>
  <div class="hp-bar-container">
    <div class="hp-bar" style="width: 100%"></div>
    <span class="hp-text">50/50</span>
  </div>
  <div class="status-effects"></div>
  <div class="action-display"><span class="action-name">Idle</span></div>
</div></div>
  <div class="event-log">
  <p>No events</p>
</div>
  
</div>"
`;

exports[`BattleViewer Integration > Snapshot Tests > should produce deterministic rendering for same input 1`] = `
"<div class="battle-viewer">
  <div class="players"><div class="character-card player" data-character-id="player-1">
  <div class="character-name"><span style="color: #2196f3; font-weight: bold;">Hero</span></div>
  <div class="hp-bar-container">
    <div class="hp-bar" style="width: 80%"></div>
    <span class="hp-text">80/100</span>
  </div>
  <div class="status-effects"><span class="status shielded" data-duration="2">Shielded (15, 2)</span></div>
  <div class="action-display"><span class="action-name">Idle</span></div>
</div></div>
  <div class="enemies"><div class="character-card enemy" data-character-id="enemy-1">
  <div class="character-name"><span style="color: #9c27b0; font-weight: bold;">Goblin</span></div>
  <div class="hp-bar-container">
    <div class="hp-bar" style="width: 60%"></div>
    <span class="hp-text">30/50</span>
  </div>
  <div class="status-effects"><span class="status poisoned" data-duration="3">Poisoned (3)</span></div>
  <div class="action-display"><span class="action-name">Idle</span></div>
</div></div>
  <div class="event-log">
  <p>No events</p>
</div>
  
</div>"
`;
